Thu Apr  9 21:38:20 2015  Tanaka Akira  <akr@fsij.org>

	* internal.h (rb_execarg_parent_end): Declared.

	* process.c: "spawn" opens files in the parent process.
	  (check_exec_redirect): Add an placeholder for fd in parameters
	  for fd_open.
	  (check_exec_fds_1): Delete fd_open condition.
	  (check_exec_fds): Don't call check_exec_fds_1 with fd_open.
	  (rb_execarg_parent_start): Open files specified as "spawn" options
	  and add "dup2" options.
	  (rb_execarg_parent_end): New function to close opened fds.
	  (run_exec_open): Removed.
	  (rb_execarg_run_options): Don't call run_exec_open.
	  (rb_spawn_internal): Call rb_execarg_parent_end.

	* io.c (pipe_open): Call rb_execarg_parent_end.

	* ext/pty/pty.c (establishShell): Call rb_execarg_parent_end.

Thu Apr  9 20:52:31 2015  Tanaka Akira  <akr@fsij.org>

	* internal.h (rb_execarg_parent_start): Renamed from rb_execarg_fixup.

	* process.c: Follows the above change.

	* io.c: Ditto.

	* ext/pty/pty.c: Ditto.

Thu Apr  9 20:35:12 2015  Tanaka Akira  <akr@fsij.org>

	* process.c (fd_clear_cloexec): Extracted from run_exec_dup2.

Thu Apr  9 09:26:47 2015  Eric Wong  <e@80x24.org>

	* ccan/list/list.h: sync with ccan upstream
	  [ccan commit c2fbfe5282ba264f3485586e7efa8a5967f2d386]

Thu Apr  9 08:24:03 2015  Masahiro Tomita  <tommy@tmtm.org>

	* ext/socket/raddrinfo.c (addrinfo_mload): fix memory leak of
	  addrinfo.  [ruby-dev:48923] [Bug #11051]

Wed Apr  8 17:45:02 2015  Shannon Skipper  <shannonskipper@gmail.com>

	* version.c (Init_version): the version of the engine or
	  interpreter.  [Fix GH-858]

Wed Apr  8 16:15:30 2015  Kenta Murata  <mrkn@cookpad.com>

	* bigdecimal: conform to ruby's license.  [ruby-core:68466] [Bug #10952]

Wed Apr  8 14:57:06 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_wreadlink): should treat junctions like as
	  symlinks.

Wed Apr  8 14:03:47 2015  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_symbol.rb: fix syntax error.
