@@ -1,3 +1,7 @@
+Thu Apr  9 22:19:19 2015  Tanaka Akira  <akr@fsij.org>
+
+	* process.c (redirect_open): Removed.
+
 Thu Apr  9 21:38:20 2015  Tanaka Akira  <akr@fsij.org>
 
 	* internal.h (rb_execarg_parent_end): Declared.
